--- a/SimpleVectorGraphicViewer/SimpleVectorGraphicViewer.csproj
+++ b/SimpleVectorGraphicViewer/SimpleVectorGraphicViewer.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -59,6 +59,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\Utils\DataExtractors.cs" />
+    <Compile Include="Factory\Interfaces\IShapeFactory.cs" />
+    <Compile Include="Factory\ShapeFactory.cs" />
+    <Compile Include="Factory\Utils\ShapeValidator.cs" />
     <Compile Include="Models\Math\Vector.cs" />
     <Compile Include="Models\Primitives\Circle.cs" />
     <Compile Include="Models\Primitives\Line.cs" />
